--- a/portfolio_analysis-ES.ipynb
+++ b/portfolio_analysis-ES.ipynb
@@ -1829,7 +1829,7 @@
         "id": "HsReh76hGn57"
       },
       "source": [
-        "ANÁLISIS DE EXPOSICIÓN FRENTE A FACTORES FAMA Y FRENCH. Usaremos datos diarios para poder convertirlos a semanales y así eliminar el ruido al e"
+        "ANÁLISIS DE EXPOSICIÓN FRENTE A FACTORES FAMA Y FRENCH. Usaremos datos diarios para poder convertirlos a semanales y así eliminar el ruido."
       ]
     },
     {
