--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -6,7 +6,7 @@
         "id": "McN1jjBQMY_5"
       },
       "source": [
-        "Julian Andres and Pablo Domínguez"
+        "Julian Andres Thomas and Pablo Domínguez"
       ]
     },
     {
