--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -43,13 +43,13 @@
       "source": [
         "**ASSET ALLOCATION**\n",
         "\n",
-        "* **Supermarkets:** Costco, Walmart, and Kroger: there will always be demand for essential goods; it is inelastic demand.\n",
+        "* **Supermarkets:** Costco, Walmart, and Kroger. There will always be demand for essential goods, purely inelastic.\n",
         "\n",
         "* **Healthcare:** Eli Lilly and Company (pharmaceutical), AbbVie (pharmaceutical), UnitedHealth Group (insurance): In a recession, we believe that society would not stop consuming pharmaceuticals, and the idea of canceling an insurance subscription in the United States—where hospital costs are much higher than in most countries—is very unlikely.\n",
         "\n",
         "* **Defense and Security:** Lockheed Martin: we believe that due to political reasons and rising geopolitical tensions, its demand would increase. Moreover, a large part (70%) of its revenues comes from the U.S. Department of Defense, purchasing F-35 jets, helicopters, or missiles. Additionally, a 12% increase in defense spending is expected.\n",
         "\n",
-        "* **Tobacco:** As an addictive substance, it is unlikely that its price will fall.\n",
+        "* **Tobacco:** As it is an addictive substance, it is unlikely that its price will fall drastically.\n",
         "\n",
         "\n",
         "\n",
