--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -43,7 +43,7 @@
       "source": [
         "**ASSET ALLOCATION**\n",
         "\n",
-        "* **Supermarkets:** Costco, Walmart, and Kroger. There will always be demand for essential goods, purely inelastic.\n",
+        "* **Supermarkets:** Costco, Walmart, and Kroger. There will always be demand for essential goods, making it not very sensitive to price changes.\n",
         "\n",
         "* **Healthcare:** Eli Lilly and Company (pharmaceutical), AbbVie (pharmaceutical), UnitedHealth Group (insurance): In a recession, we believe that society would not stop consuming pharmaceuticals, and the idea of canceling an insurance subscription in the United States—where hospital costs are much higher than in most countries—is very unlikely.\n",
         "\n",
