--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -15,7 +15,7 @@
         "id": "548rCgWv3LQm"
       },
       "source": [
-        "# **PORTFOLIO DESIGN UNDER MACROECONOMIC UNCERTAINTY**"
+        "# **PORTFOLIO CONSTRUCTION UNDER MACROECONOMIC UNCERTAINTY**"
       ]
     },
     {
