--- a/portfolio_analysis.ipynb
+++ b/portfolio_analysis.ipynb
@@ -1259,7 +1259,7 @@
         "portfolio_returns = (optimal_weights @ average_returns)* (52)\n",
         "portfolio_std = np.sqrt(risk.value*52)\n",
         "portfolio = (portfolio_returns, portfolio_std)\n",
-        "print(cartera_1)"
+        "print(portfolio)"
       ]
     },
     {
